Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-9

Fix usages of Read() to ReadFully()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • M3
    • None
    • cfile
    • None
    • M3

    Description

      A bunch of places assume that Read() calls on files return the full requested number of bytes. In fact, the comment on this method says that it returns "up to" the requested number of bytes. We should add a ReadFully method which guarantees the number of bytes requested come back, and use this everywhere.

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: