src/util/env_util.cc
@@ -3,16 +3,19 @@
 
 #include <tr1/memory>
 
+#include <glog/logging.h>
 #include <string>
 
+#include "gutil/strings/substitute.h"
 #include "util/env.h"
 #include "util/env_util.h"
 #include "util/status.h"
 
+using strings::Substitute;
+using std::tr1::shared_ptr;
+
 namespace kudu {
 namespace env_util {
-
-using std::tr1::shared_ptr;
 
 Status OpenFileForWrite(Env *env, const string &path,
                         shared_ptr<WritableFile> *file) {
@@ -35,6 +38,49 @@ Status OpenFileForSequential(Env *env, const string &path,
   SequentialFile *r;
   RETURN_NOT_OK(env->NewSequentialFile(path, &r));
   file->reset(r);
+  return Status::OK();
+}
+
+static void RelocateSlice(Slice* slice, uint8_t* dst) {
+  if (slice->data() != dst) {
+    memcpy(dst, slice->data(), slice->size());
+    *slice = Slice(dst, slice->size());
+  }
+}
+
+Status ReadFully(RandomAccessFile* file, uint64_t offset, size_t n,
+                 Slice* result, uint8_t* scratch) {
+
+  bool first_read = true;
+
+  int rem = n;
+  uint8_t* dst = scratch;
+  while (rem > 0) {
+    Slice this_result;
+    RETURN_NOT_OK(file->Read(offset, rem, &this_result, dst));
+    DCHECK_LE(this_result.size(), rem);
+    if (this_result.size() == 0) {
+      // EOF
+      return Status::IOError(Substitute("EOF trying to read $0 bytes at offset $1",
+                                        n, offset));
+    }
+
+    if (first_read && this_result.size() == n) {
+      // If it's the first read, we can return a zero-copy array.
+      *result = this_result;
+      return Status::OK();
+    }
+    first_read = false;
+
+    // Otherwise, we're going to have to do more reads and stitch
+    // each read together.
+    RelocateSlice(&this_result, dst);
+    dst += this_result.size();
+    rem -= this_result.size();
+    offset += this_result.size();
+  }
+  DCHECK_EQ(0, rem);
+  *result = Slice(scratch, n);
   return Status::OK();
 }
 
