src/util/env-test.cc
@@ -10,6 +10,7 @@
 #include "util/test_util.h"
 #include "util/env.h"
 #include "util/env_util.h"
+#include "util/memenv/memenv.h"
 
 namespace kudu {
 
@@ -107,6 +108,89 @@ TEST_F(TestEnv, TestConsecutivePreallocate) {
   // and the real size for the file on disk should match only the written size
   ASSERT_STATUS_OK(env_->GetFileSize(test_path, &size));
   ASSERT_EQ(2* one_mb, size);
+}
+
+class ShortReadRandomAccessFile : public RandomAccessFile {
+ public:
+  explicit ShortReadRandomAccessFile(const shared_ptr<RandomAccessFile>& wrapped)
+    : wrapped_(wrapped) {
+  }
+
+  virtual Status Read(uint64_t offset, size_t n, Slice* result,
+                      uint8_t *scratch) const {
+    CHECK_GT(n, 0);
+    // Divide the requested amount of data by a small integer,
+    // and issue the shorter read to the underlying file.
+    int short_n = n / ((rand() % 3) + 1);
+    if (short_n == 0) {
+      short_n = 1;
+    }
+
+    VLOG(1) << "Reading " << short_n << " instead of " << n;
+
+    return wrapped_->Read(offset, short_n, result, scratch);
+  }
+
+  virtual Status Size(uint64_t *size) const {
+    return wrapped_->Size(size);
+  }
+
+ private:
+  const shared_ptr<RandomAccessFile> wrapped_;
+};
+
+static void WriteTestFile(Env* env, const string& path, size_t size) {
+  // Write 64KB of data to a file, with a simple pattern stored in it.
+  shared_ptr<WritableFile> wf;
+  ASSERT_STATUS_OK(env_util::OpenFileForWrite(env, path, &wf));
+  faststring data;
+  data.resize(size);
+  for (int i = 0; i < data.size(); i++) {
+    data[i] = (i * 31) & 0xff;
+  }
+  ASSERT_STATUS_OK(wf->Append(Slice(data)));
+  wf->Close();
+}
+
+static void VerifyTestData(const Slice& read_data, size_t offset) {
+  for (int i = 0; i < read_data.size(); i++) {
+    size_t file_offset = offset + i;
+    ASSERT_EQ((file_offset * 31) & 0xff, read_data[i]) << "failed at " << i;
+  }
+}
+
+TEST_F(TestEnv, TestReadFully) {
+  SeedRandom();
+  const string kTestPath = "test";
+  const int kFileSize = 64 * 1024;
+  gscoped_ptr<Env> mem(NewMemEnv(Env::Default()));
+
+  WriteTestFile(mem.get(), kTestPath, kFileSize);
+  ASSERT_NO_FATAL_FAILURE();
+
+  // Reopen for read
+  shared_ptr<RandomAccessFile> raf;
+  ASSERT_STATUS_OK(env_util::OpenFileForRandom(mem.get(), kTestPath, &raf));
+
+  ShortReadRandomAccessFile sr_raf(raf);
+
+  const int kReadLength = 10000;
+  Slice s;
+  gscoped_ptr<uint8_t[]> scratch(new uint8_t[kReadLength]);
+
+  // Verify that ReadFully reads the whole requested data.
+  ASSERT_STATUS_OK(env_util::ReadFully(&sr_raf, 0, kReadLength, &s, scratch.get()));
+  ASSERT_EQ(s.data(), scratch.get()) << "Should have returned a contiguous copy";
+  ASSERT_EQ(kReadLength, s.size());
+
+  // Verify that the data read was correct.
+  VerifyTestData(s, 0);
+
+  // Verify that ReadFully fails with an IOError at EOF.
+  Status status = env_util::ReadFully(&sr_raf, kFileSize - 100, 200, &s, scratch.get());
+  ASSERT_FALSE(status.ok());
+  ASSERT_TRUE(status.IsIOError());
+  ASSERT_STR_CONTAINS(status.ToString(), "EOF");
 }
 
 }  // namespace kudu
